# SWE-agent--SWE-agent

./: acceptance.md  goal.md  log_parser.py  progress.md  pyproject.toml  run_test.sh  todo.md
codeagent/: __init__.py  commands.py  exceptions.py  history.py  models.py  parsing.py  problem.py  tools.py  types.py
codeagent/agent/: __init__.py  agent.py  hooks.py  templates.py
codeagent/environment/: __init__.py  hooks.py  repo.py  swe_env.py
config/: default_backticks.yaml
config/sweagent_0_7/: 07.yaml
sweagent/: __init__.py  exceptions.py  types.py
sweagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sweagent/agent/: agents.py  history_processors.py  models.py  problem_statement.py
sweagent/environment/: repo.py  swe_env.py
sweagent/environment/hooks/: abstract.py
sweagent/run/: batch_instances.py  common.py  quick_stats.py  run.py  run_replay.py  run_single.py
sweagent/run/hooks/: abstract.py  apply_patch.py  open_pr.py
sweagent/tools/: bundle.py  commands.py  parsing.py  tools.py
sweagent/utils/: config.py  github.py
tests/: __init__.py  test_agent.py  test_environment.py  test_history.py  test_models.py  test_parsing.py  test_problem.py  test_tools.py  test_types_and_exceptions.py
tools/windowed/lib/: flake8_utils.py  windowed_file.py
